AUTOMAKE_OPTIONS=foreign 
bin_PROGRAMS=anti-tamper
anti_tamper_SOURCES=main.c 3des.c cli/linux/cli_unix.c core.c cli/linux/cparser_show_tree.c cli/linux/cparser_tree.c hash.c log.c md5.c protocol_sftp.c stack.c svn.c tamperlog.c tree.c util.c
DEFAULT_INCLUDES = -I.@am__isrc@/include -I.@am__isrc@/cli/linux
